Se realizan ajsutes por SONAR y se ajusta restriccíón cursos del mismo semestre para que se omita para semestre -1